--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ main{
 }
 
 .cartItemsContainer{
-    border: 1px solid #f1f1f1;
     height: 100px;
     margin-bottom: 13px;
 }
@@ -77,4 +76,13 @@ img{
 .detailsContainer{
     display: flex;
     justify-content: space-between;
+}
+
+.tableHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #f1f1f1;
+    border-bottom: 1px solid #f1f1f1;
+    padding:5px 0px;
 }
